fix: The sign in button is not visible if the device is in landscape mode

--- a/src/components/header/dimensions/tablet/TabletView.scss
+++ b/src/components/header/dimensions/tablet/TabletView.scss
@@ -394,6 +394,9 @@
         }
       }
     }
+    @media (max-height: 610px) {
+      max-height: calc(100vh - 80px);
+    }
   }
   .wallet__connected__tablet {
     position: relative;
